--- a/CategoryAtomic.mediawiki
+++ b/CategoryAtomic.mediawiki
@@ -35,13 +35,13 @@ All of the atomic operations that modify memory are full memory barriers.
 
 === Atomic Locks ===
 
-<!-- #The following is included on SDL_AtomicLock and SDL_AtomicTryLock.  Any changes between these comments will be reflected on those pages.  Please use caution when editing.  Start include here. -->
+<!-- #The following is included on SDL_AtomicLock and SDL_AtomicTryLock.  Any changes between these comments will be reflected on those pages.  Please use caution when editing.  Start Include here. -->
 
 The atomic locks are efficient spinlocks using CPU instructions, but are vulnerable to starvation and can spin forever if a thread holding a lock has been terminated.  For this reason you should minimize the code executed inside an atomic lock and never do expensive things like API or system calls while holding them.
 
 /!\ The atomic locks are not safe to lock recursively.
 
-<!-- #The Include ends here -->
+<!-- #End Include here -->
 == Structures ==
 
 <<FullSearch(category:CategoryAtomic CategoryStruct)>>
