--- a/SDL_AtomicLock.mediawiki
+++ b/SDL_AtomicLock.mediawiki
@@ -25,6 +25,7 @@ You can add your code example here
 <<Include(CategoryAtomic, , , from="Start Include here.", to="##End Include here")>>
 
 == Related Functions ==
+:[[SDL_AtomicTryLock]]
 :[[SDL_AtomicUnlock]]
 
 ----
