--- a/SDL_AtomicSetPtr.mediawiki
+++ b/SDL_AtomicSetPtr.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_AtomicSetPtr =
 Use this function to set a pointer to a value atomically.
@@ -15,18 +14,14 @@ void* SDL_AtomicSetPtr(void** a,
 == Function Parameters ==
 {|
 |'''a'''
-|^a pointer to a pointer to an atomic variable^
+|a pointer to a pointer
 |-
 |'''v'''
-|^a pointer to the desired value^
+|the desired pointer value
 |}
 
 == Return Value ==
-Returns the previous value of the pointer.  <<Color2(green,This doesn't seem like the right RV for a void*.)>>
-
-Returns ^a pointer to the previous value^ on success.
-
-<<Color2(green,What happens on failure?)>>
+Returns the previous value of the pointer.
 
 == Code Examples ==
 ```c++
@@ -39,7 +34,6 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_AtomicCASPtr]]
 :[[SDL_AtomicGetPtr]]
-:[[SDL_AtomicSet]]
 
 ----
 [[CategoryAPI]], [[CategoryAtomic]]
