--- a/SDL_VideoInit.mediawiki
+++ b/SDL_VideoInit.mediawiki
@@ -7,17 +7,13 @@ Use this function to initialize the video subsystem, optionally specifying a vid
 
 == Syntax ==
 ```c++
-int SDL_VideoInit(const char* driver_name,
-                  Uint32      flags)
+int SDL_VideoInit(const char* driver_name)
 ```
 
 == Function Parameters ==
 {|
 |'''driver_name'''
 |the name of a video driver to initialize, or NULL for the default driver
-|-
-|'''flags'''
-|SDL_INIT_EVENTTHREAD or 0; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
@@ -56,8 +52,6 @@ int main(int argc, char** argv) {
 
 == Remarks ==
 This function initializes the video subsystem, setting up a connection to the window manager, etc, and determines the available display modes and pixel formats, but does not initialize a window or graphics mode.
-
-If '''flags''' is set to SDL_INIT_EVENTTHREAD it will run the event loop in a separate thread (not supported by all OSs).
 
 If you use this function and you haven't used the SDL_INIT_VIDEO flag with either [[SDL_Init]]() or [[SDL_InitSubSystem]](), you should call [[SDL_VideoQuit]]() before calling [[SDL_Quit]]().
 
