--- a/SGRemarks.mediawiki
+++ b/SGRemarks.mediawiki
@@ -20,7 +20,7 @@ For additional assistance with editing, saving, or wiki-appropriate markup see t
 
 ----
 == Adding Your Remarks ==
-Place your remark between the ```== Remarks ==``` and {{{== Code Examples ==}}} headings:
+Place your remark in the ```== Remarks ==``` section:
 {|
 |<width="30%" bgcolor="#EDEDED">If...
 |<bgcolor="#EDEDED">Then...
