--- a/SGCodeExamples.mediawiki
+++ b/SGCodeExamples.mediawiki
@@ -42,7 +42,8 @@ Place your code example in the ```== Code Examples ==``` section:
 |''Example'': [[SDL_Init]]()
 |}
 
-For more information on markup see [http://wiki.libsdl.org/moin.cgi/SGWikiBasics]
+For more information on markup see the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] Style Guide.
+
 
 [[#ToC|Return to Table of Contents]]
 
