--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -68,13 +68,25 @@ An enumeration of pixel formats.
 |SDL_PIXELFORMAT_ARGB4444
 |
 |-
+|SDL_PIXELFORMAT_RGBA4444
+|
+|-
 |SDL_PIXELFORMAT_ABGR4444
+|
+|-
+|SDL_PIXELFORMAT_BGRA4444
 |
 |-
 |SDL_PIXELFORMAT_ARGB1555
 |
 |-
+|SDL_PIXELFORMAT_RGBA5551
+|
+|-
 |SDL_PIXELFORMAT_ABGR1555
+|
+|-
+|SDL_PIXELFORMAT_BGRA5551
 |
 |-
 |SDL_PIXELFORMAT_RGB565
