update content - scancode > ScanCode

--- a/SDL_Scancode.mediawiki
+++ b/SDL_Scancode.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 '''DRAFT'''
 
-= SDL_scancode =
+= SDL_ScanCode =
 An enumeration of the SDL keyboard scancode representation.
 
 
