--- a/SDL_Scancode.mediawiki
+++ b/SDL_Scancode.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 '''DRAFT'''
 
-= SDL_ScanCode =
+= SDL_Scancode =
 An enumeration of the SDL keyboard scancode representation.
 
 
