--- a/SDL_Keysym.mediawiki
+++ b/SDL_Keysym.mediawiki
@@ -2,15 +2,15 @@
 <!-- pragma disable-camelcase -->
 '''DRAFT'''
 
-= SDL_KeySym =
+= SDL_Keysym =
 A structure that contains ^key codes^ used in key events.
 
 
 == Data Fields ==
 {|
-|SDL_ScanCode
+|SDL_Scancode
 |'''scancode'''
-|SDL physical key code - see [[SDL_ScanCode]] for details
+|SDL physical key code - see [[SDL_Scancode]] for details
 |-
 |SDLKey
 |'''sym'''
@@ -25,7 +25,7 @@ A structure that contains ^key codes^ used in key events.
 |deprecated use [[SDL_TextInputEvent]] instead
 |}
 
-<<Color2(green,SDL_ScanCode does not exist but there is a page for [[SDL_scancode]].  Is that a typo?  Should '''mod''' reference [[SDLMod]]?)>>
+<<Color2(green,Should '''mod''' reference [[SDLMod]]?)>>
 
 == Code Examples ==
 ```c++
