--- a/SDL_GetScancodeName.mediawiki
+++ b/SDL_GetScancodeName.mediawiki
@@ -14,7 +14,7 @@ const char* SDL_GetScancodeName(SDL_scancode scancode)
 == Function Parameters ==
 {|
 |'''scancode'''
-|the desired [[SDL_scancode]] to query ???
+|the desired [[SDL_Scancode]] to query ???
 |}
 
 == Return Value ==
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-See [[SDL_scancode]] for details. 
+See [[SDL_Scancode]] for details. 
 
 == Related Functions ==
 :[[SDL_GetScancodeFromKey]]
